2018-05-09  Carlos Eduardo Ramalho  <cadubentzen@gmail.com>

        [GTK][JHBuild] LLVM 3.7.0 build is broken with GCC 8.1
        https://bugs.webkit.org/show_bug.cgi?id=185461

        Reviewed by Michael Catanzaro.

        JHBuild now compiles LLVM 6 and Mesa 18.0.3.

        * gtk/jhbuild.modules:

2018-05-09  Michael Catanzaro  <mcatanzaro@igalia.com>

        Unreviewed. Update OptionsWPE.cmake and NEWS for 2.21.1 release.

        * wpe/manifest.txt.in: Distribute the NEWS.

2018-05-09  Michael Catanzaro  <mcatanzaro@igalia.com>

        [WPE] Build cleanly with GCC 8 and ICU 60
        https://bugs.webkit.org/show_bug.cgi?id=185462

        Reviewed by Carlos Alberto Lopez Perez.

        * TestWebKitAPI/CMakeLists.txt: Fix weird build failure, we were missing a directory. Not
        sure why this was never noticed until now or why the bots are OK.
        * gtk/jhbuild.modules: Add upstream patch to avoid warnings inside G_DEFINE_TYPE.
        * gtk/patches/glib-cast-function-type.patch: Added.
        * wpe/jhbuild.modules: Add upstream patch to avoid warnings inside G_DEFINE_TYPE.
        * wpe/patches/glib-cast-function-type.patch: Added.

2018-05-06  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC][GTK][JSCONLY] Use capstone disassembler
        https://bugs.webkit.org/show_bug.cgi?id=185283

        Reviewed by Michael Catanzaro.

        * gtk/manifest.txt.in:
        * wpe/manifest.txt.in:

2018-05-09  Antti Koivisto  <antti@apple.com>

        Add OptionSet::operator& and operator bool
        https://bugs.webkit.org/show_bug.cgi?id=185306

        Reviewed by Anders Carlsson.

        * TestWebKitAPI/Tests/WTF/OptionSet.cpp:
        (TestWebKitAPI::TEST):

2018-05-08  Wenson Hsieh  <wenson_hsieh@apple.com>

        Consolidate WebContentReaderIOS and WebContentReaderMac into WebContentReaderCocoa
        https://bugs.webkit.org/show_bug.cgi?id=185340

        Reviewed by Tim Horton.
