@@ -1,3 +1,15 @@
+2018-05-09  Leo Balter  <leonardo.balter@gmail.com>
+
+        Set build.webkit.org to use the new Test262-runner
+        https://bugs.webkit.org/show_bug.cgi?id=184933
+
+        Reviewed by Aakash Jain.
+
+        * BuildSlaveSupport/build.webkit.org-config/steps.py:
+        (RunTest262Tests):
+        (RunTest262Tests.countFailures):
+        * BuildSlaveSupport/build.webkit.org-config/steps_unittest.py:
+
 2018-05-09  Carlos Eduardo Ramalho  <cadubentzen@gmail.com>
 
         [GTK][JHBuild] LLVM 3.7.0 build is broken with GCC 8.1
